[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/death.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/actors/enemies/zombie.gd" type="Script" id=2]



[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.458824, 0.65098, 0.403922, 1 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.803922, 0.168627, 0.121569, 1 )

[sub_resource type="CapsuleMesh" id=5]
material = SubResource( 4 )

[node name="Zombie" type="KinematicBody" groups=[
"dicks",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Death" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0.3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInjured" type="MeshInstance" parent="."]
transform = Transform( 1.1, 0, 0, 0, -4.80825e-08, -1.1, 0, 1.1, -4.80825e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="died" from="." to="." method="_on_Zombie_died"]
[connection signal="injured" from="." to="." method="_on_Zombie_injured"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
